# cmake-cookbook

chapter-01/recipe-03/c-example/: CMakeLists.txt  message.c
chapter-01/recipe-03/c-objlib-example/: CMakeLists.txt
chapter-01/recipe-04/c-example/: CMakeLists.txt  hello-world.c
chapter-01/recipe-05/c-example/: CMakeLists.txt  message.h
chapter-01/recipe-08/c-example/: CMakeLists.txt  compute-areas.c  geometry_circle.c  geometry_circle.h  geometry_polygon.c  geometry_polygon.h  geometry_rhombus.c  geometry_rhombus.h  geometry_square.c  geometry_square.h
